Fixed more layout issues throughout and other minor enhancements

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -9,9 +9,9 @@
   @apply bg-stone-950 bg-size-[36px_36px];
 }
 
-/* html {
+html {
   scrollbar-gutter: stable;
-} */
+}
 
 /* STYLES FOR RENDERED BLOG POSTS */
 
@@ -75,7 +75,7 @@
 }
 
 .about h2 {
-  @apply mb-1.5 text-sm font-medium text-stone-500;
+  @apply mb-3 font-medium text-stone-100;
 }
 
 .about p {
